Fix padding on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -48,4 +48,9 @@ aside {
         text-align: center;
         padding-right: 0;
     }
+    header,
+    footer {
+        padding: 0;
+    }
 }
+
